<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:id="@+id/container" android:background="@drawable/img_login" android:layout_width="match_parent" android:layout_height="match_parent">
    <EditText android:theme="@style/LoginEditText" android:textColor="#ffffff" android:textColorHint="#999999" android:id="@+id/loginTel" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="330dp" android:hint="@string/phone_number" android:selectAllOnFocus="true" android:maxLength="11" android:inputType="number" android:layout_marginStart="24dp" android:layout_marginEnd="24dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
    <EditText android:theme="@style/LoginEditText" android:textColor="#ffffff" android:textColorHint="#999999" android:id="@+id/loginPassword" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="40dp" android:hint="@string/prompt_password" android:selectAllOnFocus="true" android:inputType="textPassword" android:imeOptions="actionDone" android:imeActionLabel="@string/action_sign_in_short" android:layout_marginStart="24dp" android:layout_marginEnd="24dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/loginTel"/>
    <RelativeLayout android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="25dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/LoginButton">
        <TextView android:textColor="#fff" android:gravity="left|center_vertical|center_horizontal|center" android:id="@+id/textView8" android:layout_width="wrap_content" android:layout_height="40dp" android:text="沒有账号？"/>
        <TextView android:textColor="#ffc107" android:gravity="center" android:id="@+id/signUpTextView" android:layout_width="wrap_content" android:layout_height="40dp" android:text="马上注册" android:layout_toRightOf="@+id/textView8"/>
    </RelativeLayout>
    <Button android:enabled="true" android:textSize="18sp" android:textColor="#fff" android:layout_gravity="start" android:id="@+id/LoginButton" android:background="@drawable/shape_view_yellow" android:layout_width="match_parent" android:layout_height="48dp" android:text="@string/action_sign_in" android:layout_marginStart="24dp" android:layout_marginEnd="24dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/loginPassword" app:layout_constraintVertical_bias="0.338"/>
    <TextView android:textColor="#ffc107" android:id="@+id/forgetPasswordTextView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="30dp" android:text="忘记密码？" android:layout_marginEnd="24dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="1" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/loginPassword"/>
    <ProgressBar android:layout_gravity="center" android:id="@+id/loading" android:visibility="gone" android:layout_width="0dp" android:layout_height="0dp" android:layout_marginTop="100dp" android:layout_marginBottom="64dp" android:layout_marginStart="32dp" android:layout_marginEnd="32dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="@+id/loginPassword" app:layout_constraintHorizontal_bias="0.501" app:layout_constraintStart_toStartOf="@+id/loginPassword" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_bias="0.144"/>
</androidx.constraintlayout.widget.ConstraintLayout>
