<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:id="@+id/mobile_navigation" app:startDestination="@+id/navigation_home">
    <fragment android:label="@string/title_home" android:name="com.wujieshuju.huidou.p031ui.fragment.home.HomeFragment" android:id="@+id/navigation_home"/>
    <fragment android:label="@string/title_dashboard" android:name="com.wujieshuju.huidou.p031ui.fragment.dashboard.DashboardFragment" android:id="@+id/navigation_dashboard"/>
    <fragment android:label="@string/title_notifications" android:name="com.wujieshuju.huidou.p031ui.fragment.usercenter.UserCenterFragment" android:id="@+id/navigation_notifications"/>
    <fragment android:label="定时公告" android:name="com.wujieshuju.huidou.p031ui.fragment.dashboard.TimingNoticeFragment" android:gravity="center_horizontal" android:id="@+id/timing_notice_fragment"/>
    <fragment android:label="欢迎语" android:name="com.wujieshuju.huidou.p031ui.fragment.dashboard.WelcomeMsgSettingFragment" android:gravity="center_horizontal" android:id="@+id/welcome_msg_fragment"/>
    <fragment android:label="关键词回复" android:name="com.wujieshuju.huidou.p031ui.fragment.dashboard.AutoReplyFragment" android:gravity="center_horizontal" android:id="@+id/autoReplyFragment"/>
    <fragment android:label="自动关注" android:name="com.wujieshuju.huidou.p031ui.fragment.dashboard.AssistantFocusOnFragment" android:id="@+id/assistantFocusOnFragment"/>
    <fragment android:label="自动刷单" android:name="com.wujieshuju.huidou.p031ui.fragment.dashboard.AutoBuyFragment" android:id="@+id/autoBuyFragment"/>
    <fragment android:label="产品购买" android:name="com.wujieshuju.huidou.p031ui.fragment.usercenter.ProductPurchaseFragment" android:id="@+id/productPurchaseFragment"/>
    <fragment android:label="自动刷礼物" android:name="com.wujieshuju.huidou.p031ui.fragment.dashboard.AutoSentGiftFragment" android:id="@+id/autoSentGiftFragment"/>
    <fragment android:label="关注回复" android:name="com.wujieshuju.huidou.p031ui.fragment.dashboard.FocusOnReplyFragment" android:id="@+id/focusOnReplyFragment"/>
    <fragment android:label="我的订单" android:name="com.wujieshuju.huidou.p031ui.fragment.usercenter.OrderDetailFragment" android:id="@+id/myOrderFragment"/>
    <fragment android:label="疯点屏幕" android:name="com.wujieshuju.huidou.p031ui.fragment.dashboard.ClickScreenFragment" android:id="@+id/clickScreenFragment"/>
    <fragment android:label="粉丝群发消息" android:name="com.wujieshuju.huidou.p031ui.fragment.dashboard.SendMsgToFansFragment" android:id="@+id/sendMsgToFansFragment"/>
    <fragment android:label="自动关注" android:name="com.wujieshuju.huidou.p031ui.fragment.dashboard.AutoFocusOnFragment" android:id="@+id/autoFocusOnFragment"/>
    <fragment android:label="礼物回复" android:name="com.wujieshuju.huidou.p031ui.fragment.dashboard.ReceiveGiftMsgFragment" android:id="@+id/receiveGiftMsgFragment"/>
</navigation>
